fix, add filename to the cli

--- a/5fe150dd96cb52da4a78ad97.md
+++ b/5fe150dd96cb52da4a78ad97.md
@@ -6,78 +6,78 @@ export MAX_PRICE=1
 ## train_0.tar
 ### This is the #1 part of the google open image training set. Choose from below miners:
 ```
-lotus client retrieve --maxPrice $MAX_PRICE --miner f08403 bafykbzacebp7375x6s6vlhxeiqfrufhsq62dhingycjvghb5gnybvavgyz5bo
-lotus client retrieve --maxPrice $MAX_PRICE --miner f022352 bafykbzacebp7375x6s6vlhxeiqfrufhsq62dhingycjvghb5gnybvavgyz5bo
-lotus client retrieve --maxPrice $MAX_PRICE --miner f019551 bafykbzacebp7375x6s6vlhxeiqfrufhsq62dhingycjvghb5gnybvavgyz5bo
+lotus client retrieve --maxPrice $MAX_PRICE --miner f022352 bafykbzacebp7375x6s6vlhxeiqfrufhsq62dhingycjvghb5gnybvavgyz5bo train_0.tar
+lotus client retrieve --maxPrice $MAX_PRICE --miner f019551 bafykbzacebp7375x6s6vlhxeiqfrufhsq62dhingycjvghb5gnybvavgyz5bo train_0.tar
+lotus client retrieve --maxPrice $MAX_PRICE --miner f08403 bafykbzacebp7375x6s6vlhxeiqfrufhsq62dhingycjvghb5gnybvavgyz5bo train_0.tar
 ```
 ## train_1.tar
 ### This is the #2 part of the google open image training set. Choose from below miners:
 ```
-lotus client retrieve --maxPrice $MAX_PRICE --miner f058000 bafykbzacebgtybqjwjxnezxycwdtdbsfugazsy2hepwjijj3xvbgs7zwe6rie
-lotus client retrieve --maxPrice $MAX_PRICE --miner f0109043 bafykbzacebgtybqjwjxnezxycwdtdbsfugazsy2hepwjijj3xvbgs7zwe6rie
-lotus client retrieve --maxPrice $MAX_PRICE --miner f08403 bafykbzacebgtybqjwjxnezxycwdtdbsfugazsy2hepwjijj3xvbgs7zwe6rie
+lotus client retrieve --maxPrice $MAX_PRICE --miner f0109043 bafykbzacebgtybqjwjxnezxycwdtdbsfugazsy2hepwjijj3xvbgs7zwe6rie train_1.tar
+lotus client retrieve --maxPrice $MAX_PRICE --miner f08403 bafykbzacebgtybqjwjxnezxycwdtdbsfugazsy2hepwjijj3xvbgs7zwe6rie train_1.tar
+lotus client retrieve --maxPrice $MAX_PRICE --miner f058000 bafykbzacebgtybqjwjxnezxycwdtdbsfugazsy2hepwjijj3xvbgs7zwe6rie train_1.tar
 ```
 ## train_10.tar
 ### This is the #11 part of the google open image training set. Choose from below miners:
 ```
-lotus client retrieve --maxPrice $MAX_PRICE --miner f042567 bafykbzaceduke5bhr64j5q5ktbcyuicoibfqpudzt55yeb4gb3bfcp7xtve4m
-lotus client retrieve --maxPrice $MAX_PRICE --miner f022352 bafykbzaceduke5bhr64j5q5ktbcyuicoibfqpudzt55yeb4gb3bfcp7xtve4m
-lotus client retrieve --maxPrice $MAX_PRICE --miner f099608 bafykbzaceduke5bhr64j5q5ktbcyuicoibfqpudzt55yeb4gb3bfcp7xtve4m
-lotus client retrieve --maxPrice $MAX_PRICE --miner f02576 bafykbzaceduke5bhr64j5q5ktbcyuicoibfqpudzt55yeb4gb3bfcp7xtve4m
+lotus client retrieve --maxPrice $MAX_PRICE --miner f02576 bafykbzaceduke5bhr64j5q5ktbcyuicoibfqpudzt55yeb4gb3bfcp7xtve4m train_10.tar
+lotus client retrieve --maxPrice $MAX_PRICE --miner f042567 bafykbzaceduke5bhr64j5q5ktbcyuicoibfqpudzt55yeb4gb3bfcp7xtve4m train_10.tar
+lotus client retrieve --maxPrice $MAX_PRICE --miner f022352 bafykbzaceduke5bhr64j5q5ktbcyuicoibfqpudzt55yeb4gb3bfcp7xtve4m train_10.tar
+lotus client retrieve --maxPrice $MAX_PRICE --miner f099608 bafykbzaceduke5bhr64j5q5ktbcyuicoibfqpudzt55yeb4gb3bfcp7xtve4m train_10.tar
 ```
 ## train_11.tar
 ### This is the #12 part of the google open image training set. Choose from below miners:
 ```
-lotus client retrieve --maxPrice $MAX_PRICE --miner f022352 bafykbzacebqagleabap4afonu5efdy7mty5pirkrc24rnhteqei35kcbqjome
+lotus client retrieve --maxPrice $MAX_PRICE --miner f022352 bafykbzacebqagleabap4afonu5efdy7mty5pirkrc24rnhteqei35kcbqjome train_11.tar
 ```
 ## train_12.tar
 ### This is the #13 part of the google open image training set. Choose from below miners:
 ```
-lotus client retrieve --maxPrice $MAX_PRICE --miner f086423 bafykbzacediqdl6dnvlufbpk4nomiluuwzhxedp2nlhdsroaz7ud7e6dcpaty
-lotus client retrieve --maxPrice $MAX_PRICE --miner f022352 bafykbzacediqdl6dnvlufbpk4nomiluuwzhxedp2nlhdsroaz7ud7e6dcpaty
+lotus client retrieve --maxPrice $MAX_PRICE --miner f022352 bafykbzacediqdl6dnvlufbpk4nomiluuwzhxedp2nlhdsroaz7ud7e6dcpaty train_12.tar
+lotus client retrieve --maxPrice $MAX_PRICE --miner f086423 bafykbzacediqdl6dnvlufbpk4nomiluuwzhxedp2nlhdsroaz7ud7e6dcpaty train_12.tar
 ```
 ## train_13.tar
 ### This is the #14 part of the google open image training set. Choose from below miners:
 ```
-lotus client retrieve --maxPrice $MAX_PRICE --miner f01278 bafykbzaceb7yn3o4346dx76ujlg322n2drgbf4yex2yrjwaojgninadjeewgm
-lotus client retrieve --maxPrice $MAX_PRICE --miner f08403 bafykbzaceb7yn3o4346dx76ujlg322n2drgbf4yex2yrjwaojgninadjeewgm
-lotus client retrieve --maxPrice $MAX_PRICE --miner f010507 bafykbzaceb7yn3o4346dx76ujlg322n2drgbf4yex2yrjwaojgninadjeewgm
-lotus client retrieve --maxPrice $MAX_PRICE --miner f022352 bafykbzaceb7yn3o4346dx76ujlg322n2drgbf4yex2yrjwaojgninadjeewgm
+lotus client retrieve --maxPrice $MAX_PRICE --miner f022352 bafykbzaceb7yn3o4346dx76ujlg322n2drgbf4yex2yrjwaojgninadjeewgm train_13.tar
+lotus client retrieve --maxPrice $MAX_PRICE --miner f08403 bafykbzaceb7yn3o4346dx76ujlg322n2drgbf4yex2yrjwaojgninadjeewgm train_13.tar
+lotus client retrieve --maxPrice $MAX_PRICE --miner f01278 bafykbzaceb7yn3o4346dx76ujlg322n2drgbf4yex2yrjwaojgninadjeewgm train_13.tar
+lotus client retrieve --maxPrice $MAX_PRICE --miner f010507 bafykbzaceb7yn3o4346dx76ujlg322n2drgbf4yex2yrjwaojgninadjeewgm train_13.tar
 ```
 ## train_2.tar
 ### This is the #3 part of the google open image training set. Choose from below miners:
 ```
-lotus client retrieve --maxPrice $MAX_PRICE --miner f022352 bafykbzaceb4rccouxlbrukpogpiq4vjid3udikgsb3v7w4kd265dlfkegi7t2
-lotus client retrieve --maxPrice $MAX_PRICE --miner f01278 bafykbzaceb4rccouxlbrukpogpiq4vjid3udikgsb3v7w4kd265dlfkegi7t2
+lotus client retrieve --maxPrice $MAX_PRICE --miner f022352 bafykbzaceb4rccouxlbrukpogpiq4vjid3udikgsb3v7w4kd265dlfkegi7t2 train_2.tar
+lotus client retrieve --maxPrice $MAX_PRICE --miner f01278 bafykbzaceb4rccouxlbrukpogpiq4vjid3udikgsb3v7w4kd265dlfkegi7t2 train_2.tar
 ```
 ## train_3_1.tar
 ### This is the #15 part of the google open image training set. Choose from below miners:
 ```
-lotus client retrieve --maxPrice $MAX_PRICE --miner f044160 bafykbzacecfzxzjt7w7koozz4zjzc7etcojnitjddsjtewl6hn4dd7by7fl2m
-lotus client retrieve --maxPrice $MAX_PRICE --miner f02620 bafykbzacecfzxzjt7w7koozz4zjzc7etcojnitjddsjtewl6hn4dd7by7fl2m
-lotus client retrieve --maxPrice $MAX_PRICE --miner f019551 bafykbzacecfzxzjt7w7koozz4zjzc7etcojnitjddsjtewl6hn4dd7by7fl2m
+lotus client retrieve --maxPrice $MAX_PRICE --miner f02620 bafykbzacecfzxzjt7w7koozz4zjzc7etcojnitjddsjtewl6hn4dd7by7fl2m train_3_1.tar
+lotus client retrieve --maxPrice $MAX_PRICE --miner f044160 bafykbzacecfzxzjt7w7koozz4zjzc7etcojnitjddsjtewl6hn4dd7by7fl2m train_3_1.tar
+lotus client retrieve --maxPrice $MAX_PRICE --miner f019551 bafykbzacecfzxzjt7w7koozz4zjzc7etcojnitjddsjtewl6hn4dd7by7fl2m train_3_1.tar
 ```
 ## train_6.tar
 ### This is the #7 part of the google open image training set. Choose from below miners:
 ```
-lotus client retrieve --maxPrice $MAX_PRICE --miner f033036 bafykbzacecw5ihw7wegxfxbzxnq4ruc4ckmcvlw662y67enizqgpzilkaa6cc
+lotus client retrieve --maxPrice $MAX_PRICE --miner f033036 bafykbzacecw5ihw7wegxfxbzxnq4ruc4ckmcvlw662y67enizqgpzilkaa6cc train_6.tar
 ```
 ## train_7.tar
 ### This is the #8 part of the google open image training set. Choose from below miners:
 ```
-lotus client retrieve --maxPrice $MAX_PRICE --miner f02620 bafykbzaceamhpe7atqv4nsonpwidze6zis5b33k4mvgnadwzk7n56aeyjn5gy
-lotus client retrieve --maxPrice $MAX_PRICE --miner f0109043 bafykbzaceamhpe7atqv4nsonpwidze6zis5b33k4mvgnadwzk7n56aeyjn5gy
+lotus client retrieve --maxPrice $MAX_PRICE --miner f02620 bafykbzaceamhpe7atqv4nsonpwidze6zis5b33k4mvgnadwzk7n56aeyjn5gy train_7.tar
+lotus client retrieve --maxPrice $MAX_PRICE --miner f0109043 bafykbzaceamhpe7atqv4nsonpwidze6zis5b33k4mvgnadwzk7n56aeyjn5gy train_7.tar
 ```
 ## train_9.tar
 ### This is the #10 part of the google open image training set. Choose from below miners:
 ```
-lotus client retrieve --maxPrice $MAX_PRICE --miner f022352 bafykbzaceavcpnna5cx47evch2ltufdxabxrgmqz2qzedolxmj72hrcm7tuwc
-lotus client retrieve --maxPrice $MAX_PRICE --miner f086423 bafykbzaceavcpnna5cx47evch2ltufdxabxrgmqz2qzedolxmj72hrcm7tuwc
+lotus client retrieve --maxPrice $MAX_PRICE --miner f022352 bafykbzaceavcpnna5cx47evch2ltufdxabxrgmqz2qzedolxmj72hrcm7tuwc train_9.tar
+lotus client retrieve --maxPrice $MAX_PRICE --miner f086423 bafykbzaceavcpnna5cx47evch2ltufdxabxrgmqz2qzedolxmj72hrcm7tuwc train_9.tar
 ```
 ## val.tar
 ### This is google open image validation set. Choose from below miners:
 ```
-lotus client retrieve --maxPrice $MAX_PRICE --miner f022352 bafykbzacecozk7dojvsy76bm4c5umjtuzwzgwpiantutj3q42mh4zknyqzvzg
-lotus client retrieve --maxPrice $MAX_PRICE --miner f019399 bafykbzacecozk7dojvsy76bm4c5umjtuzwzgwpiantutj3q42mh4zknyqzvzg
-lotus client retrieve --maxPrice $MAX_PRICE --miner f02620 bafykbzacecozk7dojvsy76bm4c5umjtuzwzgwpiantutj3q42mh4zknyqzvzg
+lotus client retrieve --maxPrice $MAX_PRICE --miner f022352 bafykbzacecozk7dojvsy76bm4c5umjtuzwzgwpiantutj3q42mh4zknyqzvzg val.tar
+lotus client retrieve --maxPrice $MAX_PRICE --miner f02620 bafykbzacecozk7dojvsy76bm4c5umjtuzwzgwpiantutj3q42mh4zknyqzvzg val.tar
+lotus client retrieve --maxPrice $MAX_PRICE --miner f019399 bafykbzacecozk7dojvsy76bm4c5umjtuzwzgwpiantutj3q42mh4zknyqzvzg val.tar
 ```
